# text-cleaning

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  main.py  pyproject.toml
jp_broom/: __init__.py  clean_text.py  clean_text_rework.py  cleaned.txt  config.py  test.txt  tokenized.txt
jp_broom/helpers/: __init__.py  characters.py  nlp.py  punctuation.py
jp_broom/mapping/: __init__.py  patterns.py  punctuation.py
jp_broom/static/: kaomoji.txt
scripts/: clean.sh
src/: __init__.py  clean_text.py  main.py  normalize.py
src/text_cleaning/: clean_text.py  main.py
tests/: conftest.py  test_clean_rework.py  test_cleaning.py  test_helpers.py
tests/helpers/: test_characters.py  test_nlp.py  test_punctuation.py
tests/test_cleaning/: 000.json  001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json
