[tool.poetry]
name = "jp-broom"
version = "1.0.0"
description = "A powerful text cleaner for Japanese web texts"
license = "MIT"
authors = ["Kurohashi-Kawahara Lab, Kyoto Univ <contact@nlp.ist.i.kyoto-u.ac.jp>", "Michael Verdegaal"]
maintainers = ["Michael Verdegaal"]
readme = "README.md"
repository = "https://github.com/MichaelVerdegaal/jp-broom"
keywords = [
    "NLP"
]
classifiers = [
    "Programming Language :: Python :: 3.11"
]

[tool.poetry.dependencies]
python = "^3.11"
neologdn = "^0.5.2"
mojimoji = "^0.0.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
