[tool.poetry]
name = "jp-broom"
version = "1.0.1"
description = "A powerful text cleaner for Japanese web texts"
license = "MIT"
authors = ["Kurohashi-Kawahara Lab, Kyoto Univ <contact@nlp.ist.i.kyoto-u.ac.jp>", "Michael Verdegaal"]
maintainers = ["Michael Verdegaal"]
readme = "README.md"
repository = "https://github.com/MichaelVerdegaal/jp-broom"
keywords = [
    "NLP"
]
classifiers = [
    "Programming Language :: Python :: 3.11"
]

[tool.poetry.dependencies]
python = "^3.11"
neologdn = "^0.5.2"
mojimoji = "^0.0.12"
regex = "^2023.10.3"
spacy = "^3.7.2"
ja_core_news_md = {url = "https://github.com/explosion/spacy-models/releases/download/ja_core_news_md-3.7.0/ja_core_news_md-3.7.0.tar.gz"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
